# agent_sre

./: .gitignore  PLANNING_SEPARATION_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  __init__.py  architecture.md  debug_imports.py  debug_sre_agent.py  demo_atomic_agents.py  example_usage.py  pyproject.toml  test_refactor.py
chroma_db/: chroma.sqlite3
code-rag/: .env.example  .gitignore  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md  pyproject.toml  setup.py
code-rag/src/code_rag/: __init__.py
code-rag/src/code_rag/api/: __init__.py  main.py  models.py  routes.py
code-rag/src/code_rag/config/: __init__.py  settings.py
code-rag/src/code_rag/core/: __init__.py  embeddings.py  llm.py  rag.py  retriever.py
code-rag/src/code_rag/data/: __init__.py  loader.py  processor.py
code-rag/src/code_rag/db/: __init__.py  chroma.py
code-rag/src/code_rag/utils/: __init__.py  helpers.py
code-rag/src/scripts/: generate_sre_documents.py  ingest.py  ingest_sre_documents.py  query.py  query_sre_incidents.py  validate_sre_rag.py
controllers/planning_agent/: README.md  __init__.py  atomic_executor.py  atomic_planning_agent.py  execution_orchestrator.py  executor.py  planner_schemas.py  simple_agent.py  test_atomic_components.py
data/raw/: sre_incidents.json
orchestration_agent/: orchestrator.py
orchestration_agent/agents/: choice_agent.py  qa_agent.py  query_agent.py  rag_qa_agent.py
orchestration_agent/planning/: __init__.py  simple_agent.py
orchestration_agent/schemas/: __init__.py  orchestrator_schemas.py
orchestration_agent/services/: chroma_db.py
orchestration_agent/tools/: searxng_search.py
orchestration_engine/: __init__.py  orchestrator.py
sre-agent/: README.md  pyproject.toml
sre-agent/chroma_db/: chroma.sqlite3
sre-agent/examples/: run_workflow.py  sample_alerts.json
sre-agent/examples/chroma_db/: chroma.sqlite3
sre-agent/src/sre_agent/: __init__.py  alert_processor.py
sre-agent/src/sre_agent/api/: main.py
sre-agent/src/sre_agent/config/: settings.py
sre-agent/src/sre_agent/graph/: workflow.py
sre-agent/src/sre_agent/graph/nodes/: execution.py  planning.py  rag_lookup.py  recommendation.py  reflection.py
sre-agent/src/sre_agent/models/: alert.py  recommendation.py  state.py
sre-agent/src/sre_agent/services/: infra_service.py  rag_service.py
(+15 files in other folders)
